--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,22 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Teaching"
+  #   url: /teaching/    
+
+  - title: "Courses"
+    url: /courses/
+
+  - title: "Projects"
+    url: /projects/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
     url: /cv/
