--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiakun Fan"
-  avatar           : "profile.png"
+  avatar           : "avatar.jfif
   bio              : "CUHK(SZ) ECE Senior 2024FALL"
   location         : "Shenzhen CN"
   employer         :
